--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,8 @@ board = esp32dev
 framework = arduino
 board_build.partitions = default_16MB.csv
 ;board_upload.flash_size = 16MB
-upload_speed = 2000000
+;upload_speed = 2000000
 ;upload_speed = 921600
 ;upload_protocol =espota
 ;upload_port = 192.168.137.99
+upload_port = COM15
